[package]
name = "verb-net"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
surf = "1.0.3"
async-std = "1.5.0"
serde = { version = "1.0.106", features = ["derive"] }
verb = { git= "https://github.com/wehjin/verb.git" }